--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/database
 spring.datasource.url=jdbc:h2:mem:data;
 
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= create-drop
